<resources>
    <string name="app_name">Book Manager</string>
    <string name="app_description">This application is designed and developed by Aleksandar Toprek, with a little help from Android tutorials, stackoverflow.com, and randomized Google searches.</string>
    <string name="copyright">Copyright © Book Manager 2020. All rights reserved.</string>
    <string name="button_about">ABOUT</string>
    <string name="button_features">Favourites</string>
    <string name="button_wishlist">Wishlist</string>
    <string name="button_already_read_books">Already Read Books</string>
    <string name="button_currently_reading_books">Currently Reading Books</string>
    <string name="button_all_books">All Books</string>
    <string name="image_description_book_manager_logo">Book Manager Logo</string>
    <string name="label_list_of_all_books">List of all books</string>
    <string name="toggle_grid_view">Grid View</string>
    <string name="toggle_list_view">List View</string>
    <string name="book_name_placeholder">Book Name</string>
    <string name="book_cover_photo_description">Book cover photo</string>
    <string name="number_of_pages_placeholder">Pages: 123</string>
    <string name="author_placeholder">Author: Name Surname</string>
    <string name="short_book_description_label">Short description:</string>
    <string name="book_cover_image_description">Book cover image</string>
    <string name="author">Author:</string>
    <string name="number_of_pages_label">Number of pages:</string>
    <string name="no_pages_placeholder">123</string>
    <string name="currently_reading_button_label">Currently Reading</string>
    <string name="add_to_wishlist_button_label">Add to Wishlist</string>
    <string name="already_read_button_label">Already Read</string>
    <string name="add_to_favourites_button_label">Add to Favourites</string>
    <string name="description_book_layout">Description</string>
    <string name="long_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent aliquam malesuada enim et vulputate. Cras lobortis lobortis cursus. Maecenas ac congue urna. Praesent at leo ante. Curabitur eu iaculis libero. Duis iaculis, erat id pellentesque tincidunt, felis mi maximus orci, sit amet viverra tellus felis consequat nibh. Nullam mattis diam eget ipsum efficitur, eu molestie mauris gravida. Sed tincidunt velit a diam ultricies venenatis. Morbi lorem purus, iaculis vel justo ut, tempus tincidunt tellus. Fusce dignissim nisi scelerisque sem tempor eleifend. Donec convallis condimentum lectus et imperdiet. Vestibulum mattis ligula rhoncus, dignissim odio sit amet, blandit diam. Curabitur varius est sagittis nisi pulvinar, vitae fringilla nibh pharetra. Praesent semper mi augue, sit amet pulvinar libero efficitur ac. Maecenas tincidunt, tortor ac vulputate elementum, dolor nisl facilisis diam, vel laoreet dolor nunc sed nulla. Nam id neque lacus.</string>
    <string name="list_of_currently_reading_books_label">List of currently reading books</string>
    <string name="list_of_already_read_books_label">List of already read books</string>
    <string name="wishlist_label">Wishlist</string>
    <string name="favourite_books_label">Favourite books</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="all_books_activity_label">All Books</string>
    <string name="currently_reading_activity_label">Currently Reading Books</string>
    <string name="already_read_activity_label">Already Read Books</string>
    <string name="wishlist_activity_label">Wishlist</string>
    <string name="favourite_books_activity_label">Favourite Books</string>
    <string name="book_activity_label">Book Details</string>
    <string name="add_new_book_activity_label">Add New Book</string>
    <string name="no_books_in_category">Unfortunately you don\'t have any books in this category. Try adding one from list of all books.</string>
</resources>
