<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/logo_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/book_manager_logo"
            android:contentDescription="@string/image_description_book_manager_logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/alegreya_black"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_container"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/all_books_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:text="@string/button_all_books"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/currently_reading_books_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/all_books_button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:text="@string/button_currently_reading_books"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/already_read_books_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/currently_reading_books_button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:text="@string/button_already_read_books"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/wish_list_books_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/already_read_books_button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:text="@string/button_wishlist"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/favourites_books_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/wish_list_books_button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:text="@string/button_features"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/favourites_books_button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="70dp"
            android:text="@string/button_about" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copyright_text"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        android:textSize="16sp"/>

</RelativeLayout>