<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_card_view_all_books_layout_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="7dp"
    app:elevation="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <ImageView
            android:id="@+id/book_image_all_books_layout_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/book_cover_photo_description"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:id="@+id/book_name_all_books_layout_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/book_name_placeholder"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/book_author_all_books_layout_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_horizontal"
                android:layout_below="@id/book_name_all_books_layout_list"
                android:layout_marginTop="10dp"
                android:text="@string/author_placeholder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/book_pages_all_books_layout_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_horizontal"
                android:layout_below="@id/book_author_all_books_layout_list"
                android:layout_marginTop="10dp"
                android:text="@string/number_of_pages_placeholder"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>