<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/intro_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:id="@+id/book_image_book_layout"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    android:contentDescription="@string/book_cover_image_description"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/book_name_book_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/book_image_book_layout"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/book_name_placeholder"
                    android:textColor="@color/colorPrimary"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/author_book_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_name_book_layout"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/book_image_book_layout"
                    android:fontFamily="@font/open_sans_italic"
                    android:text="@string/author_placeholder"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <View
                    android:id="@+id/hr1"
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_below="@id/author_book_layout"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_toEndOf="@id/book_image_book_layout"
                    android:background="#c0c0c0" />

                <TextView
                    android:id="@+id/pages_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hr1"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/book_image_book_layout"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/number_of_pages_label"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/number_of_pages_book_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hr1"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/pages_number_label"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/no_pages_placeholder"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/hr3"
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_below="@id/pages_number_label"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_toEndOf="@id/book_image_book_layout"
                    android:background="#c0c0c0" />

                <TextView
                    android:id="@+id/learn_more_book_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hr3"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/book_image_book_layout"
                    android:fontFamily="@font/open_sans_italic"
                    android:text="Details about book"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/button_container_book_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro_container"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp">

                <LinearLayout
                    android:id="@+id/buttons1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/currently_reading_books_button_book_layout"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:text="@string/currently_reading_button_label"
                        android:textAllCaps="false"
                        android:textSize="13sp"
                        app:iconGravity="end"
                        app:iconPadding="3dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/wish_list_books_button_book_layout"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:text="@string/add_to_wishlist_button_label"
                        android:textAllCaps="false"
                        android:textSize="13sp"
                        app:iconGravity="end"
                        app:iconPadding="3dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buttons2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/buttons1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/already_read_books_button_book_layout"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:text="@string/already_read_button_label"
                        android:textAllCaps="false"
                        android:textSize="13sp"
                        app:iconGravity="end"
                        app:iconPadding="3dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/favourites_books_button_book_layout"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:text="@string/add_to_favourites_button_label"
                        android:textAllCaps="false"
                        android:textSize="13sp"
                        app:iconGravity="end"
                        app:iconPadding="3dp" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_container_book_layout"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/description_book_layout"
                    android:textSize="23sp" />

                <View
                    android:id="@+id/hr2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/description_label"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#c0c0c0" />

                <TextView
                    android:id="@+id/long_description_book_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hr2"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/long_description_placeholder"
                    android:textSize="18sp" />


            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>